forgot to save div

--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@
     <head>
         <title></title>
     </head>
+    <div id="hero_selector">
+        <div id="Warrior"></div>
+        <div id="Cleric"></div>
+        <div id="Wizard"></div>
+        <div id="Rogue"></div>
+    </div>
 </html>
