--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" href="styles.css" type="text/css"></style>
     </head>
     <div id="hero_selector">
-        <div id="Warrior"></div>
-        <div id="Cleric"></div>
-        <div id="Wizard"></div>
-        <div id="Rogue"></div>
+        <div id="Warrior">War</div>
+        <div id="Cleric">Cler</div>
+        <div id="Wizard">Wiz</div>
+        <div id="Rogue">Rog</div>
     </div>
 </html>
