story text entered into HTML rough draft

--- a/index.html
+++ b/index.html
@@ -1,7 +1,233 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>The Incredible Doctor Flying Cloud</title>
         <link rel="stylesheet" href="styles.css" type="text/css"></style>
     </head>
+    <body>
+        <h1>The Incredible Doctor Flying Cloud</h1>
+        <p>He wasnt wearing a breach cloth---he didnt have war
+            paint all over his face---his straight black hair was short
+            and he was carrying a suitcase instead of a bow and
+            arrow. His stocky frame was not picturesque; however,
+            he did have a fierce look in his beady black
+            eyes---or did an eight year old girl imagine that? His
+            skin though not red red was a satisfyingly dark color,
+            and he instilled a feeling of awe in me.</p>
+        <p>Later we were all to look back with wonder at the events
+            that transpired in the next fifteen months. its
+            unbelievable, said my older sister last week. no one but
+            Papa and Mama would have allowed a stranger to stay
+            so long in their home, treat him as part of the family and
+            charge him nothing.</p>
+        <p>Mama and Papa never had much money but we were
+            rich in the important things in life. Mama was a cute
+            little redhead with a wonderful sense of humor. Papa
+            was a well read school teacher with a twinkle in his
+            
+            eyes. they both had a deep and abiding faith in god and
+            were always ready to help others. according to Papa the
+            more you put into life---the more you get back. one of
+            his favorite quotes ends---and in parting leave behind
+            you footprints on the sands of time.</p>
+        <p>We lived in the hills of Arkansas on top of Brock
+            mountain, just 1\4 mile off state highway 25. during the
+            depression years tramps walked the unpaved dusty
+            highways in search of a place to work and live. Often
+            they came to our house, clearly visible from the
+            highway, and asked for food and a place to sleep. Papa
+            never turned anyone away and our doors were never
+            locked. If there were keys for the locks, I never saw
+            them. if they asked to work for food, Papa would let
+            them chop some wood for the wood cook stove. if they
+            did not offer to work Papa fed them anyway. He let
+            them seep in the hay loft in the barn. there were no
+            extra rooms in the house or he would probably have put
+            them there.</p>
+        <p>Grandma Massey lived with us. she was well along in
+            years and was always searching for the proverbial
+            fountain of youth, or at any rate a cure for her aches and
+            pains. grandmas friend, Alice Bullard, told her about
+            this eighty year old Indian Doctor Flying Cloud who had
+            wandered through the country to locust grove, Arkansas.</p>
+        <p>According to Mrs. Bullard this doctor, who was also a
+            Methodist preacher, was performing healing miracles
+            everywhere he went. at grandmas request Papa drove
+            down the mountain and asked DR flying cloud to come
+            and treat grandmas ailments.</p>
+        <p>He moved into our house bag and baggage---and stayed
+            fifteen months. He even sent for his nephew, Willie, to
+            come and stay with him in our house. He made himself
+            completely at home and doctored our family along with
+            everyone in the neighborhood. occasionally he stayed a
+            few days with someone else but he considered our
+            house to be his home.</p>
+        <p>He believed in ghosts to us---spirits to him. he sat
+            around the fireplace with we three kids and our friends.
+            while we roasted peanuts and popped corn he told us the
+            most fascinating ghost stories I ever heard. they were
+            deliciously frightening and entertained the lot of us
+            many a long winter night. they were also the basis for
+            some pretty wild dreams---the most frightening ones
+            had to do with people being buried alive. I still have a
+            phobia about that!</p>
+        <p>Eugene, Evelyn and I grew quite fond of DR flying
+            cloud and I believe he liked us too. he insisted we call
+            him grandpa which I for one was a little reluctant to do.
+            I felt that name was only for grandpa Jackson.</p>
+        <p>Though he did like me, he was responsible for my being
+            punished once. you see---I still believe it was his fault
+            after all these years. Papa grew some very good
+            watermelons we three kids helped to cultivate and
+            harvest. We stored them in the underground
+            storm cellar.</p>
+        <p>There was an exceptionally large melon I wanted very
+            much to eat. Doctor Flying Cloud said we must save it
+            for a special time, which he would choose, and we must
+            save the seeds. one afternoon carol and faith Thomas
+            came to visit Evelyn and I. Mama said carol and Evelyn
+            could choose a watermelon and faith and I
+            could choose a watermelon. I asked, may we choose any
+            melon we want to eat? Mama said, yes. of course I
+            took the big one! we did save the seeds and what we
+            could not eat we shared with everyone else.</p>
+        <p>Doctor flying cloud was very angry with me. he told
+            Mama I should be punished because I knew the melon
+            belonged to him. Mama told me to apologize but I
+            refused to say I was sorry. she took a peach tree limb
+            and switched my bare legs. I still refused to apologize.
+            she finally gave up on me. I resented DR flying clouds
+            attitude very much. later my mother said she should not
+            have punished me. it really wasnt his melon and he had
+            no right to boss us around.</p>
+        <p>for instance the incident at the pine grove. there was a
+            large grove of pine trees down in our pasture near the
+            watermelon patch. the limbs grew low to the ground
+            and the thick pine needles gave one a sense of privacy
+            in the shelter of the trees. during the hot summer we
+            played in the pine grove much of the time we had free
+            from the farm work.</p>
+        <p>Doctor Flying Cloud also liked to go to the pine grove.
+            he gave us strict orders not to come near the grove while
+            he was there.</p>
+        <p>One afternoon we children had been down to the creek
+            swimming. as we were nearing the pine grove on our
+            path to the house we heard this peculiar noise coming
+            from the grove. naturally curiosity got the best of us
+            and we walked under the trees to see what was going
+            on.</p>
+        <p>Doctor Flying Cloud was bent over at the waist, waving
+            his arms, dancing around in a large circle and shouting
+            what sounded like hoe-kay-hee, hoe-kay-hee over and
+            over again. when he faced our direction he saw us
+            standing there.</p>
+        <p>he was furious!! he told us we had broken a taboo. he
+            was doing his war dance and war whoop and no white
+            person was ever supposed to see or hear. we had
+            desecrated a sacred ritual and would be very lucky
+            indeed if nothing bad happened to us as a result of our
+            naughty behavior.</p>
+        <p>he accused us of following him to spy on him. he asked
+            Mama and Papa to see that we didnt follow him again.
+            by that time we didnt even want to know any more
+            about what he did in the pine grove.</p>
+        <p>Doctor Flying Cloud told us he was a protégé of the
+            Roosevelt family. he said he was a frequent visitor in
+            their home. I often dangled teddy on my knee when he
+            was growing up, said Doctor Flying Cloud. he told us the
+            Roosevelts put him through school and were responsible
+            for his being so well educated.</p>
+        <p>I dont know which school he attended---just that it was
+            back east somewhere. he was a full fledged doctor of
+            the homeopathic school. at that time there were two
+            schools of medicine--the homeopathic and the
+            allopathic. later, about 1900, the etstic school of
+            medicine combined the good qualities of both schools.
+        <p>Doctor Flying Cloud was also a doctor of chiropractic
+            medicine. he convinced Mama she should allow him to
+            cure her headache. they moved everything off the long
+            oak harvest table in the kitchen and he had Mama lie
+            down on her stomach on the table. I dont know if he
+            could have cured her headache or not. she allowed him
+            to take about two whacks on her back---then she jumped
+            off that table madder than and old wet hen! I heard him
+            say, come back here! Im not through. oh yes, you are!
+            said Mama. she told him in no uncertain terms what she
+            thought of that kind of doctoring. she said she would
+            take his pills, but no more adjustments. I was sitting in
+            the porch swing on the long back porch and heard the
+            whole thing. she stalked by me muttering, that crazy
+            fool would kill you if you let him.</p>
+        <p>Those pills were something else! my brother had an
+            extremely bad case of tonsillitis. he gargled with two of
+            those little yellow pills Doctor Flying Cloud gave him.
+            the next morning his temperature was gone and so was
+            the sore throat.</p>
+        <p>I dont know what drug was in those pills but I still
+            remember the taste. it was like nothing I had ever tasted
+            before or since. after I was married and had the three
+            children I had a bad sore throat. I asked the doctor if
+            my tonsils were the cause. He said, no, you have had
+            your tonsils removed. I told him I had never had
+            surgery. he said, well, you have no tonsils. they must
+            have rotted out! I think those lousy little yellow pills
+            burned them out. I know they burned my throat like fire
+            when I had to gargle them. none of us, cousins, aunts,
+            uncles etc. were allowed to escape those pills. we all
+            got well, either because of or in spite of his treatments.
+            When I felt ill, I did my utmost to keep him from
+            knowing.</p>
+        <p>I was anything but enthusiastic about being
+            doctored by Doctor Flying Cloud, but I sure liked to watch
+            him eat fish! I still have trouble believing anyone can
+            eat fish like he did. He always wanted a glass of sweet milk, a
+            glass of buttermilk, a glass of water and a cup of coffee
+            around his plate. he would feed one of those bony little
+            creek perch into the right side of his mouth and the
+            bones would roll out the left side. I was totally
+            enthralled. grandma Massey caught me staring in
+            amazement and took me to task for being rude.</p>
+        <p>One afternoon Doctor Flying Cloud opened one of
+            his mysterious black suitcases. he said he wanted us to
+            see one of his most prized possessions. he lifted out the
+            most beautiful feathered Indian war bonnet. there were
+            feathers worked into a beaded band all around the face
+            and a long streamer of feathers down the back. I was
+            awed at the sight of it. when he placed it on my head I
+            was truly delighted. I strutted around before the mirror
+            with those back feathers almost brushing the back of my
+            knees as he told us the story.</p>
+        <p>This beautiful feathered relic was sitting bulls war
+            bonnet---the one he wore during Custers last stand.
+            sitting bull was Doctor Flying Clouds uncle. though
+            Doctor Flying Cloud was just fourteen years old and too
+            young to be a warrior, he along with the entire tribe was
+            present during the battle of custers last stand. he did not
+            tell us any particulars about the fighting---he just said,
+            the Indians won that one.</p>
+        <p>I was skeptical about his being sitting bulls nephew. he
+            had told us so many ghost stories--and I didnt really
+            believe any of them. like Papa said, Doctor flying cloud
+            admitted he had never actually seen a ghost, he just
+            knew they were for real. now here was something right
+            out of the history book! I guess I sort of classed it
+            along with the other stories and didnt ask too many
+            questions.</p>
+        <p>I regret that attitude of mine to this day. years after
+            Doctor Flying Cloud had gone on his way, I discovered
+            this story was true. he, wearing the war bonnet, was
+            pictured with some Washington dignitaries in my high
+            school government text book. the accompanying
+            caption stated flying cloud was sitting bulls nephew and
+            this was indeed sitting bulls war bonnet. Someone
+            smarter than I believed him!</p>
+        <p>So who knows? I may yet meet some of Doctor Flying
+            Clouds spirits I didnt believe were for real either!</p>
+            
+        <p>combined rememberances of eugene ritter, evelyin
+            massengill and floy brent
+            Dr Flying cloud joined our family in 1934 in the
+            ..
+            Massey house @ almond, ar.
+        </p>
 </html>
