image added beginning to style text

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <title>The Incredible Doctor Flying Cloud</title>
+        <link href='https://fonts.googleapis.com/css?family=Carter One' rel='stylesheet'>
         <link rel="stylesheet" href="styles.css" type="text/css"></style>
     </head>
     <body>
         <h1>The Incredible Doctor Flying Cloud</h1>
+        <img src="images\drflyingcloud.png">
         <p>He wasnt wearing a breach cloth---he didnt have war
             paint all over his face---his straight black hair was short
             and he was carrying a suitcase instead of a bow and
