working on fading text in and out

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>The Incredible Doctor Flying Cloud</h1>
         <img src="images\drflyingcloud.png">
+        <div class="wrapper">
         <p>He wasnt wearing a breach cloth---he didnt have war
             paint all over his face---his straight black hair was short
             and he was carrying a suitcase instead of a bow and
@@ -232,4 +233,5 @@
             ..
             Massey house @ almond, ar.
         </p>
+        <div>
 </html>
