before setting up script to frame text

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
     <head>
         <title>The Incredible Doctor Flying Cloud</title>
         <link href='https://fonts.googleapis.com/css?family=Carter One' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Walter Turncoat' rel='stylesheet'>
         <link rel="stylesheet" href="styles.css" type="text/css"></style>
     </head>
     <body>
         <h1>The Incredible Doctor Flying Cloud</h1>
-        <img src="images\drflyingcloud.png">
-        <div class="wrapper">
+        <div class="imgColumn">
+            <img src="images\drflyingcloud.png">
+        </div>
+        <div class="txtColumn">
+
         <p>He wasnt wearing a breach cloth---he didnt have war
             paint all over his face---his straight black hair was short
             and he was carrying a suitcase instead of a bow and
@@ -226,12 +230,13 @@
             smarter than I believed him!</p>
         <p>So who knows? I may yet meet some of Doctor Flying
             Clouds spirits I didnt believe were for real either!</p>
-            
-        <p>combined rememberances of eugene ritter, evelyin
-            massengill and floy brent
-            Dr Flying cloud joined our family in 1934 in the
-            ..
-            Massey house @ almond, ar.
+        <p>These are the combined rememberances of Eugene Ritter, Evelyin
+            Massengill and Floy Brent
+            Dr Flying cloud joined our family in 1934 in the Massey house @ almond, ar.
         </p>
-        <div>
+        </div>
+        <div class="w3-bar">
+            <button class="w3-button w3-left w3-light-grey">&laquo; Previous</button>
+            <button class="w3-button w3-right w3-green">Next &raquo;</button>
+        </div>
 </html>
