simplifying and adding missing tags

--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
         <link href='https://fonts.googleapis.com/css?family=Walter Turncoat' rel='stylesheet'>
         <link rel="stylesheet" href="styles.css" type="text/css"></style>
     </head>
-    <body>
+<body>
+    <main>
         <h1>The Incredible Doctor Flying Cloud</h1>
-        <div class="imgColumn">
-            <img src="images\drflyingcloud.png">
-        </div>
-        <div class="txtColumn">
-
+        <img src="images\drflyingcloud.png">
         <p>He wasnt wearing a breach cloth---he didnt have war
             paint all over his face---his straight black hair was short
             and he was carrying a suitcase instead of a bow and
@@ -234,9 +231,6 @@
             Massengill and Floy Brent
             Dr Flying cloud joined our family in 1934 in the Massey house @ almond, ar.
         </p>
-        </div>
-        <div class="w3-bar">
-            <button class="w3-button w3-left w3-light-grey">&laquo; Previous</button>
-            <button class="w3-button w3-right w3-green">Next &raquo;</button>
-        </div>
+    </main>
+</body>
 </html>
