arrow navigation images

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
     <main>
         <h1>The Incredible Doctor Flying Cloud</h1>
-        <img src="images\drflyingcloud.png">
-        <p>He wasnt wearing a breach cloth---he didnt have war
-            paint all over his face---his straight black hair was short
+        <img id="portrait" src="images\drflyingcloud.png" alt="Doctor Flying Cloud">
+        <div class="text">
+        <p>He wasnt wearing a breach cloth --- he didnt have war
+            paint all over his face --- his straight black hair was short
             and he was carrying a suitcase instead of a bow and
             arrow. His stocky frame was not picturesque; however,
             he did have a fierce look in his beady black
-            eyes---or did an eight year old girl imagine that? His
+            eyes --- or did an eight year old girl imagine that? His
             skin though not red red was a satisfyingly dark color,
             and he instilled a feeling of awe in me.</p>
         <p>Later we were all to look back with wonder at the events
@@ -231,10 +232,11 @@
             Massengill and Floy Brent
             Dr Flying cloud joined our family in 1934 in the Massey house @ almond, ar.
         </p>
+        </div>
     </main>
     <div class="navigation">
-        <a href="#" class="previous" onclick="previous()">&laquo; Previous</a>
-        <a href="#" class="next" onclick="next()">Next &raquo;</a>
+        <a href="#" class="previous" onclick="previous()"><img id="previous" src="images\arrohead.png" alt="&laquo; Previous"></a>
+        <a href="#" class="next" onclick="next()"><img src="images\arrohead.png" alt="Next &raquo;"></a>
     </div>
     <script type="text/javascript">
         let currentSelected = 0;
