cleaned up text

--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
 <body>
-    <main>
+    <main><article>
         <h1>The Incredible Doctor Flying Cloud</h1>
         <img id="portrait" src="images\drflyingcloud.png" alt="Doctor Flying Cloud">
-        <div class="text">
+        <p>The following historical account was previously recorded by:
+            <br>
+            <br>Floy Brent (Ritter)<br>( January 17, 1927 - July 28, 2020 )
+            <br>
+            <br>
+            In collaboration with:
+            <br>
+            <br>Eugene Ritter<br>(August 16, 1920 - January 9, 2017)
+            <br>and
+            <br>Evelyn Massengill (Ritter)<br>(1922 - November 18th, 2010)
+        </p>
         <p>He wasnt wearing a breach cloth --- he didnt have war
             paint all over his face --- his straight black hair was short
             and he was carrying a suitcase instead of a bow and
@@ -29,11 +39,10 @@
             rich in the important things in life. Mama was a cute
             little redhead with a wonderful sense of humor. Papa
             was a well read school teacher with a twinkle in his
-            
             eyes. they both had a deep and abiding faith in god and
             were always ready to help others. according to Papa the
-            more you put into life---the more you get back. one of
-            his favorite quotes ends---and in parting leave behind
+            more you put into life --- the more you get back. one of
+            his favorite quotes ends --- and in parting leave behind
             you footprints on the sands of time.</p>
         <p>We lived in the hills of Arkansas on top of Brock
             mountain, just 1\4 mile off state highway 25. during the
@@ -54,34 +63,34 @@
             fountain of youth, or at any rate a cure for her aches and
             pains. grandmas friend, Alice Bullard, told her about
             this eighty year old Indian Doctor Flying Cloud who had
-            wandered through the country to locust grove, Arkansas.</p>
-        <p>According to Mrs. Bullard this doctor, who was also a
+            wandered through the country to locust grove, Arkansas.
+            According to Mrs. Bullard this doctor, who was also a
             Methodist preacher, was performing healing miracles
             everywhere he went. at grandmas request Papa drove
             down the mountain and asked DR flying cloud to come
             and treat grandmas ailments.</p>
-        <p>He moved into our house bag and baggage---and stayed
+        <p>He moved into our house bag and baggage --- and stayed
             fifteen months. He even sent for his nephew, Willie, to
             come and stay with him in our house. He made himself
             completely at home and doctored our family along with
             everyone in the neighborhood. occasionally he stayed a
             few days with someone else but he considered our
             house to be his home.</p>
-        <p>He believed in ghosts to us---spirits to him. he sat
+        <p>He believed in ghosts to us --- spirits to him. he sat
             around the fireplace with we three kids and our friends.
             while we roasted peanuts and popped corn he told us the
             most fascinating ghost stories I ever heard. they were
             deliciously frightening and entertained the lot of us
             many a long winter night. they were also the basis for
-            some pretty wild dreams---the most frightening ones
+            some pretty wild dreams --- the most frightening ones
             had to do with people being buried alive. I still have a
             phobia about that!</p>
         <p>Eugene, Evelyn and I grew quite fond of DR flying
             cloud and I believe he liked us too. he insisted we call
             him grandpa which I for one was a little reluctant to do.
-            I felt that name was only for grandpa Jackson.</p>
-        <p>Though he did like me, he was responsible for my being
-            punished once. you see---I still believe it was his fault
+            I felt that name was only for grandpa Jackson.
+            Though he did like me, he was responsible for my being
+            punished once. you see --- I still believe it was his fault
             after all these years. Papa grew some very good
             watermelons we three kids helped to cultivate and
             harvest. We stored them in the underground
@@ -89,7 +98,7 @@
         <p>There was an exceptionally large melon I wanted very
             much to eat. Doctor Flying Cloud said we must save it
             for a special time, which he would choose, and we must
-            save the seeds. one afternoon carol and faith Thomas
+            save the see ds. one afternoon carol and faith Thomas
             came to visit Evelyn and I. Mama said carol and Evelyn
             could choose a watermelon and faith and I
             could choose a watermelon. I asked, may we choose any
@@ -105,14 +114,14 @@
             attitude very much. later my mother said she should not
             have punished me. it really wasnt his melon and he had
             no right to boss us around.</p>
-        <p>for instance the incident at the pine grove. there was a
+        <p>for instance, the incident at the pine grove --- there was a
             large grove of pine trees down in our pasture near the
             watermelon patch. the limbs grew low to the ground
             and the thick pine needles gave one a sense of privacy
             in the shelter of the trees. during the hot summer we
             played in the pine grove much of the time we had free
-            from the farm work.</p>
-        <p>Doctor Flying Cloud also liked to go to the pine grove.
+            from the farm work.
+            Doctor Flying Cloud also liked to go to the pine grove.
             he gave us strict orders not to come near the grove while
             he was there.</p>
         <p>One afternoon we children had been down to the creek
@@ -120,8 +129,8 @@
             path to the house we heard this peculiar noise coming
             from the grove. naturally curiosity got the best of us
             and we walked under the trees to see what was going
-            on.</p>
-        <p>Doctor Flying Cloud was bent over at the waist, waving
+            on.
+            Doctor Flying Cloud was bent over at the waist, waving
             his arms, dancing around in a large circle and shouting
             what sounded like hoe-kay-hee, hoe-kay-hee over and
             over again. when he faced our direction he saw us
@@ -131,8 +140,8 @@
             person was ever supposed to see or hear. we had
             desecrated a sacred ritual and would be very lucky
             indeed if nothing bad happened to us as a result of our
-            naughty behavior.</p>
-        <p>he accused us of following him to spy on him. he asked
+            naughty behavior.
+            he accused us of following him to spy on him. he asked
             Mama and Papa to see that we didnt follow him again.
             by that time we didnt even want to know any more
             about what he did in the pine grove.</p>
@@ -141,8 +150,8 @@
             their home. I often dangled teddy on my knee when he
             was growing up, said Doctor Flying Cloud. he told us the
             Roosevelts put him through school and were responsible
-            for his being so well educated.</p>
-        <p>I dont know which school he attended---just that it was
+            for his being so well educated.
+            I dont know which school he attended --- just that it was
             back east somewhere. he was a full fledged doctor of
             the homeopathic school. at that time there were two
             schools of medicine--the homeopathic and the
@@ -154,7 +163,7 @@
             oak harvest table in the kitchen and he had Mama lie
             down on her stomach on the table. I dont know if he
             could have cured her headache or not. she allowed him
-            to take about two whacks on her back---then she jumped
+            to take about two whacks on her back --- then she jumped
             off that table madder than and old wet hen! I heard him
             say, come back here! Im not through. oh yes, you are!
             said Mama. she told him in no uncertain terms what she
@@ -167,10 +176,11 @@
             extremely bad case of tonsillitis. he gargled with two of
             those little yellow pills Doctor Flying Cloud gave him.
             the next morning his temperature was gone and so was
-            the sore throat.</p>
-        <p>I dont know what drug was in those pills but I still
+            the sore throat.
+            I dont know what drug was in those pills but I still
             remember the taste. it was like nothing I had ever tasted
-            before or since. after I was married and had the three
+            before or since.</p>
+        <p>after I was married and had the three
             children I had a bad sore throat. I asked the doctor if
             my tonsils were the cause. He said, no, you have had
             your tonsils removed. I told him I had never had
@@ -203,12 +213,12 @@
             with those back feathers almost brushing the back of my
             knees as he told us the story.</p>
         <p>This beautiful feathered relic was sitting bulls war
-            bonnet---the one he wore during Custers last stand.
+            bonnet --- the one he wore during Custers last stand.
             sitting bull was Doctor Flying Clouds uncle. though
             Doctor Flying Cloud was just fourteen years old and too
             young to be a warrior, he along with the entire tribe was
             present during the battle of custers last stand. he did not
-            tell us any particulars about the fighting---he just said,
+            tell us any particulars about the fighting --- he just said,
             the Indians won that one.</p>
         <p>I was skeptical about his being sitting bulls nephew. he
             had told us so many ghost stories--and I didnt really
@@ -225,15 +235,13 @@
             school government text book. the accompanying
             caption stated flying cloud was sitting bulls nephew and
             this was indeed sitting bulls war bonnet. Someone
-            smarter than I believed him!</p>
-        <p>So who knows? I may yet meet some of Doctor Flying
+            smarter than I believed him!
+            So who knows? I may yet meet some of Doctor Flying
             Clouds spirits I didnt believe were for real either!</p>
-        <p>These are the combined rememberances of Eugene Ritter, Evelyin
-            Massengill and Floy Brent
+        <p>These are the combined rememberances of Eugene Ritter, Evelyn Massengill and Floy Brent
             Dr Flying cloud joined our family in 1934 in the Massey house @ almond, ar.
         </p>
-        </div>
-    </main>
+    </article></main>
     <div class="navigation">
         <a href="#" class="previous" onclick="previous()"><img id="previous" src="images\arrohead.png" alt="&laquo; Previous"></a>
         <a href="#" class="next" onclick="next()"><img src="images\arrohead.png" alt="Next &raquo;"></a>
