--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <main><article>
         <h1>The Incredible Doctor Flying Cloud</h1>
         <img id="portrait" src="images\drflyingcloud.png" alt="Doctor Flying Cloud">
-        <p>The following historical account was previously recorded by:
-            <br>
-            <br>Floy Brent (Ritter)<br>( January 17, 1927 - July 28, 2020 )
-            <br>
-            <br>
-            In collaboration with:
-            <br>
-            <br>Eugene Ritter<br>(August 16, 1920 - January 9, 2017)
-            <br>and
-            <br>Evelyn Massengill (Ritter)<br>(1922 - November 18th, 2010)
+        <p>The following historical account was previously recorded by:<br>
+            <br>Floy Brent (Ritter)
+            <br>January 17, 1927 - July 28, 2020<br><br>
+            In collaboration with:<br>
+            <br>Eugene Ritter
+            <br>August 16, 1920 - January 9, 2017
+            <br>Evelyn Massengill (Ritter)
+            <br>1922 - November 18th, 2010
         </p>
         <p>He wasnt wearing a breach cloth --- he didnt have war
             paint all over his face --- his straight black hair was short
@@ -243,8 +241,8 @@
         </p>
     </article></main>
     <div class="navigation">
-        <a href="#" class="previous" onclick="previous()"><img id="previous" src="images\arrohead.png" alt="&laquo; Previous"></a>
-        <a href="#" class="next" onclick="next()"><img src="images\arrohead.png" alt="Next &raquo;"></a>
+        <a href="#" class="previous" title="Previous" onclick="previous()"><img id="previous" src="images\arrohead.png" alt="&laquo; Previous"></a>
+        <a href="#" class="next" title="Next" onclick="next()"><img src="images\arrohead.png" alt="Next &raquo;"></a>
     </div>
     <script type="text/javascript">
         let currentSelected = 0;
